Change naming and routes of each end-point.
