# lib/edge_commander_web/controllers/nvrs_controller.ex
@@ -10,16 +10,15 @@ defmodule EdgeCommanderWeb.NvrsController do
   use PhoenixSwagger
 
   swagger_path :get_all_nvrs do
-    get "/v1/get_all_nvrs"
-    description "Get ALL NVRs List"
-    summary "NVRs list"
+    get "/v1/nvrs"
+    description "Returns NVRs list"
+    summary "Returns all NVRs"
     response 200, "Success"
   end
 
   swagger_path :create do
-    post "/v1/nvrs/new"
-    description "Enter NVR Details"
-    summary "Create NVR"
+    post "/v1/nvrs"
+    summary "Add a new NVR"
     parameters do
       name :query, :string, "Name", required: true
       username :query, :string, "Username", required: true
@@ -35,11 +34,11 @@ defmodule EdgeCommanderWeb.NvrsController do
   end
 
   swagger_path :delete do
-    delete "/v1/nvrs/delete"
+    delete "/v1/nvrs/{nvr_id}"
     description "Enter NVR's ID"
     summary "Delete NVR by ID"
     parameters do
-      id :query, :string, "Nvr ID", required: true
+      nvr_id :path, :string, "NVR ID", required: true
     end
     response 201, "Success"
   end
@@ -127,7 +126,7 @@ defmodule EdgeCommanderWeb.NvrsController do
   defp get_extra_value(nil, _, _), do: ""
   defp get_extra_value(_, nvr, extra_field),  do: nvr.extra |> Map.get(extra_field)
 
-  def delete(conn, %{"id" => id} = _params) do
+  def delete(conn, %{"nvr_id" => id} = _params) do
     get_nvr!(id)
     |> Repo.delete
     |> case do
