# lib/edge_commander_web/router.ex
@@ -21,16 +21,17 @@ defmodule EdgeCommanderWeb.Router do
       info: %{
         version: "1.0",
         title: "Edge Commander"
-      }
+      },
+      host: "localhost:4000"
     }
   end
 
   scope "/swagger" do
-  forward "/", PhoenixSwagger.Plug.SwaggerUI,
-    otp_app: :edge_commander,
-    swagger_file: "swagger.json",
-    disable_validator: true
-end
+    forward "/", PhoenixSwagger.Plug.SwaggerUI,
+      otp_app: :edge_commander,
+      swagger_file: "swagger.json",
+      disable_validator: true
+  end
 
   scope "/", EdgeCommanderWeb do
     pipe_through :browser # Use the default browser stack
@@ -41,6 +42,11 @@ end
     get "/commands", RooterController, :commands
     get "/sims/:sim_number", RooterController, :sim_graph_and_details
     get "/my_profile", RooterController, :my_profile
+    get "/sites", RooterController, :sites
+    get "/sms_messages", RooterController, :sms_messages
+    get "/status_report", RooterController, :status_report
+
+    get "/update_status_report", NvrsController, :update_status_report
 
     get "/users/sign_in", DashboardController, :sign_in
     get "/users/sign_up", DashboardController, :sign_up
@@ -51,53 +57,28 @@ end
     post "/users/session", SessionController, :create
     get "/users/session", SessionController, :delete
 
-    patch "/nvrs/update", NvrsController, :update
-
-    get "/update_status_report", NvrsController, :update_status_report
-    get "/status_report", RooterController, :status_report
-
-    get "/get_all_rules", CommandsController, :get_all_rules
-    post "/rules/new", CommandsController, :create
-    patch "/rules/update", CommandsController, :update
-    delete "/rules/delete", CommandsController, :delete
-    
-    post "/send_sms", SimsController, :send_sms
-    post "/receive_sms", SimsController, :receive_sms
-    get "/delivery_receipt", SimsController, :delivery_receipt
-
-    get "/sites", RooterController, :sites
-    get "/get_all_sites", SitesController, :get_all_sites
-    post "/sites/new", SitesController, :create
-    patch "/sites/update", SitesController, :update
-    delete "/sites/delete", SitesController, :delete
-
-    get "/sms_messages", RooterController, :sms_messages
-    get "/get_all_sms/:from_date/:to_date", SmsController, :get_all_sms
-
   end
 
   # Other scopes may use custom stacks.
   scope "/v1", EdgeCommanderWeb do
     pipe_through :api
 
-    get "/get_sims_data", SimsController, :get_sim_logs
-    get "/get_single_sim_data/:sim_number", SimsController, :get_single_sim_data
-    get "/create_chartjs_line_data", SimsController, :create_chartjs_line_data
-    get "/get_single_sim_sms/:sim_number", SimsController, :get_single_sim_sms
+    get "/sim/data", SimsController, :get_sim_logs
+    get "/sim/data/:sim_number", SimsController, :get_single_sim_data
+    get "/chartjs/data", SimsController, :create_chartjs_line_data
+    get "/sim/sms/:sim_number", SimsController, :get_single_sim_sms
 
-    patch "/update_profile", UsersController, :update_profile
+    get "/routers", RoutersController, :get_all_routers
+    post "/routers", RoutersController, :create
+    patch "/routers/:router_id", RoutersController, :update
+    delete "/routers/:router_id", RoutersController, :delete
 
-    get "/get_all_routers", RoutersController, :get_all_routers
-    post "/routers/new", RoutersController, :create
-    patch "/routers/update", RoutersController, :update
-    delete "/routers/delete", RoutersController, :delete
-
-    get "/get_all_nvrs", NvrsController, :get_all_nvrs
-    post "/nvrs/new", NvrsController, :create
-    delete "/nvrs/delete", NvrsController, :delete
+    get "/nvrs", NvrsController, :get_all_nvrs
+    post "/nvrs", NvrsController, :create
+    delete "/nvrs/:nvr_id", NvrsController, :delete
     patch "/nvrs/update", NvrsController, :update
 
-    get "/update_status_report", NvrsController, :update_status_report
+    patch "/update_profile", UsersController, :update_profile
 
     get "/get_all_rules", CommandsController, :get_all_rules
     post "/rules/new", CommandsController, :create
